@@ -29,93 +29,95 @@ import com.questhelper.collections.ItemCollections;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
 import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.item.ItemRequirements;
 import com.questhelper.requirements.npc.NpcRequirement;
 import com.questhelper.requirements.quest.QuestPointRequirement;
-import com.questhelper.requirements.util.LogicType;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
 import com.questhelper.rewards.UnlockReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.NpcEmoteStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
 import com.questhelper.steps.emote.QuestEmote;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 import net.runelite.api.gameval.VarbitID;
 
-import java.util.*;
-
 public class BelowIceMountain extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement cookedMeat, bread, knife, coins, knifeHighlight, breadHighlight, steakSandwich,
-		beerHighlight;
+	// Required items
+	ItemRequirement cookedMeat;
+	ItemRequirement bread;
+	ItemRequirement knife;
+	ItemRequirement coins;
 
-	ItemRequirement iceMountainTeleport, faladorTeleport, varrockTeleport, combatGearOrPickaxe;
+	// Recommended items
+	ItemRequirement iceMountainTeleport;
+	ItemRequirement faladorTeleport;
+	ItemRequirement varrockTeleport;
+	ItemRequirement combatGearOrPickaxe;
 
-	Requirement needFlex, leftFlexBeforeLearning, haveFlex, recruitedCheckal, needRecipe, haveRecipe, haveIngredients,
-		fedMarley, recruitedMarley, needBeer,gaveBeer, needRPS, recruitedBurntof, inDungeon;
+	// Mid-quest item requirements
+	ItemRequirement steakSandwich;
+	ItemRequirement beer;
 
-	QuestStep talkToWillowToStart, recruitCheckal, talkToAtlas, flexCheckal, talkToMarley, talkToCook, getIngredients,
-		makeSandwich, feedMarley, talkToMarleyAfterFeeding, talkToBurntof, buyBeer, giveBeer, playRPS, goToDungeon,
-		reenterDungeon, defeatGuardian, watchCutscene;
+	// Miscellaneous requirements
+	VarbitRequirement needFlex;
+	VarbitRequirement leftFlexBeforeLearning;
+	VarbitRequirement haveFlex;
+	VarbitRequirement recruitedCheckal;
+	VarbitRequirement needRecipe;
+	VarbitRequirement haveRecipe;
+	ItemRequirements haveIngredients;
+	VarbitRequirement fedMarley;
+	VarbitRequirement recruitedMarley;
+	VarbitRequirement needBeer;
+	VarbitRequirement gaveBeer;
+	VarbitRequirement needRPS;
+	VarbitRequirement recruitedBurntof;
+	NpcRequirement inDungeon;
 
-	ConditionalStep getCheckal, getMarley, getBurntof;
+	// Steps
+	NpcStep talkToWillowToStart;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+	ConditionalStep getCheckal;
+	NpcStep recruitCheckal;
+	NpcStep talkToAtlas;
+	NpcStep flexCheckal;
 
-		steps.put(0, talkToWillowToStart);
-		steps.put(5, talkToWillowToStart);
-		steps.put(7, talkToWillowToStart);
+	ConditionalStep getMarley;
+	NpcStep talkToMarley;
+	NpcStep talkToCook;
+	DetailedQuestStep getIngredients;
+	DetailedQuestStep makeSandwich;
+	NpcStep feedMarley;
+	NpcStep talkToMarleyAfterFeeding;
 
-		getCheckal = new ConditionalStep(this, recruitCheckal);
-		getCheckal.addStep(needFlex, talkToAtlas);
-		getCheckal.addStep(leftFlexBeforeLearning, talkToAtlas);
-		getCheckal.addStep(haveFlex, flexCheckal);
-		getCheckal.setLockingCondition(recruitedCheckal);
-		steps.put(10, getCheckal);
+	ConditionalStep getBurntof;
+	NpcStep talkToBurntof;
+	NpcStep buyBeer;
+	NpcStep giveBeer;
+	NpcStep playRPS;
 
-		getMarley = new ConditionalStep(this, talkToMarley);
-		getMarley.addStep(fedMarley, talkToMarleyAfterFeeding);
-		getMarley.addStep(needRecipe, talkToCook);
-		getMarley.addStep(steakSandwich, feedMarley);
-		getMarley.addStep(new Conditions(LogicType.AND, haveRecipe, haveIngredients), makeSandwich);
-		getMarley.addStep(haveRecipe, getIngredients);
-		getMarley.setLockingCondition(recruitedMarley);
+	NpcStep goToDungeon;
 
-		getBurntof = new ConditionalStep(this, talkToBurntof);
-		getBurntof.addStep(needRPS, playRPS);
-		getBurntof.addStep(gaveBeer, playRPS);
-		getBurntof.addStep(new Conditions(LogicType.AND, needBeer, beerHighlight), giveBeer);
-		getBurntof.addStep(needBeer, buyBeer);
-		getBurntof.setLockingCondition(recruitedBurntof);
+	ObjectStep reenterDungeon;
 
-		ConditionalStep marleyAndBurntof = new ConditionalStep(this, getMarley);
-		marleyAndBurntof.addStep(recruitedMarley, getBurntof);
-		steps.put(15, marleyAndBurntof);
+	NpcStep defeatGuardian;
 
-		steps.put(20, goToDungeon);
-		steps.put(25, goToDungeon);
-		steps.put(30, reenterDungeon);
-
-		ConditionalStep guardian = new ConditionalStep(this, reenterDungeon);
-		guardian.addStep(inDungeon, defeatGuardian);
-		steps.put(35, guardian);
-
-		steps.put(40, watchCutscene);
-
-		return steps;
-	}
+	ObjectStep watchCutscene;
 
 	@Override
 	protected void setupRequirements()
@@ -126,12 +128,9 @@ public class BelowIceMountain extends BasicQuestHelper
 		knife = new ItemRequirement("Knife", ItemID.KNIFE).isNotConsumed();
 		coins = new ItemRequirement("Coins", ItemCollections.COINS, 3);
 
-		knifeHighlight = knife.highlighted();
-		breadHighlight = bread.highlighted();
-
 		steakSandwich = new ItemRequirement("Steak Sandwich", ItemID.BIM_STEAK_SANDWICH);
 
-		beerHighlight = new ItemRequirement(true, "Asgarnian Ale", ItemID.ASGARNIAN_ALE);
+		beer = new ItemRequirement(true, "Asgarnian Ale", ItemID.ASGARNIAN_ALE);
 
 		iceMountainTeleport = new ItemRequirement("A teleport to near Ice Mountain", ItemCollections.AMULET_OF_GLORIES);
 		iceMountainTeleport.addAlternates(ItemCollections.COMBAT_BRACELETS);
@@ -140,10 +139,7 @@ public class BelowIceMountain extends BasicQuestHelper
 		varrockTeleport = new ItemRequirement("Varrock teleport", ItemID.POH_TABLET_VARROCKTELEPORT);
 		combatGearOrPickaxe = new ItemRequirement("Combat gear or a pickaxe if you don't want to fight", -1, -1).isNotConsumed();
 		combatGearOrPickaxe.setDisplayItemId(BankSlotIcons.getCombatGear());
-	}
 
-	public void setupConditions()
-	{
 		needFlex = new VarbitRequirement(VarbitID.BIM_CHECKAL, 5);
 		leftFlexBeforeLearning = new VarbitRequirement(VarbitID.BIM_CHECKAL, 10);
 		haveFlex = new VarbitRequirement(VarbitID.BIM_CHECKAL, 15);
@@ -187,11 +183,11 @@ public class BelowIceMountain extends BasicQuestHelper
 
 		getIngredients = new DetailedQuestStep(this, "Collect meat, bread and a knife to make a steak sandwich.", cookedMeat, bread, knife);
 
-		makeSandwich = new DetailedQuestStep(this, "Use the knife on the bread to make a steak sandwich. Be careful not to eat it!", knifeHighlight, breadHighlight);
+		makeSandwich = new DetailedQuestStep(this, "Use the knife on the bread to make a steak sandwich. Be careful not to eat it!", knife.highlighted(), bread.highlighted());
 
 		feedMarley = new NpcStep(this, NpcID.BIM_MARLEY, new WorldPoint(3088, 3470, 0), "Return to Marley and give him the steak sandwich. Be careful not to eat it!", steakSandwich);
 
-		talkToMarleyAfterFeeding = new NpcStep(this,  NpcID.BIM_MARLEY, new WorldPoint(3088, 3470, 0), "Talk to Marley to send him off to the excavation site.");
+		talkToMarleyAfterFeeding = new NpcStep(this, NpcID.BIM_MARLEY, new WorldPoint(3088, 3470, 0), "Talk to Marley to send him off to the excavation site.");
 		feedMarley.addSubSteps(talkToMarleyAfterFeeding);
 
 		talkToBurntof = new NpcStep(this, NpcID.BIM_BURNTOF, new WorldPoint(2956, 3367, 0), "Talk to Burntof in the " +
@@ -201,7 +197,7 @@ public class BelowIceMountain extends BasicQuestHelper
 			coins);
 		buyBeer.addDialogSteps("What ales are you serving?", "One Asgarnian Ale, please.");
 
-		giveBeer = new NpcStep(this, NpcID.BIM_BURNTOF, new WorldPoint(2956, 3367, 0), "Give Burntof the Asgarnian Ale.", beerHighlight);
+		giveBeer = new NpcStep(this, NpcID.BIM_BURNTOF, new WorldPoint(2956, 3367, 0), "Give Burntof the Asgarnian Ale.", beer);
 
 		playRPS = new NpcStep(this, NpcID.BIM_BURNTOF, new WorldPoint(2956, 3367, 0),
 			"Beat Burntof in a match of Rock-Paper-Scissors. Your choices of Rock, Paper and Scissors do not matter.");
@@ -225,32 +221,92 @@ public class BelowIceMountain extends BasicQuestHelper
 	}
 
 	@Override
-	public List<ItemRequirement> getItemRequirements()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		List<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(cookedMeat);
-		reqs.add(bread);
-		reqs.add(knife);
-		reqs.add(coins);
-		return reqs;
-	}
+		initializeRequirements();
+		setupSteps();
 
-	@Override
-	public List<ItemRequirement> getItemRecommended()
-	{
-		return Arrays.asList(iceMountainTeleport, faladorTeleport, varrockTeleport, combatGearOrPickaxe);
-	}
+		var steps = new HashMap<Integer, QuestStep>();
 
-	@Override
-	public List<String> getCombatRequirements()
-	{
-		return Collections.singletonList("Ancient Guardian (level 25), or 10 mining + a pickaxe");
+		steps.put(0, talkToWillowToStart);
+		steps.put(5, talkToWillowToStart);
+		steps.put(7, talkToWillowToStart);
+
+		getCheckal = new ConditionalStep(this, recruitCheckal);
+		getCheckal.addStep(needFlex, talkToAtlas);
+		getCheckal.addStep(leftFlexBeforeLearning, talkToAtlas);
+		getCheckal.addStep(haveFlex, flexCheckal);
+		getCheckal.setLockingCondition(recruitedCheckal);
+		steps.put(10, getCheckal);
+
+		getMarley = new ConditionalStep(this, talkToMarley);
+		getMarley.addStep(fedMarley, talkToMarleyAfterFeeding);
+		getMarley.addStep(needRecipe, talkToCook);
+		getMarley.addStep(steakSandwich, feedMarley);
+		getMarley.addStep(and(haveRecipe, haveIngredients), makeSandwich);
+		getMarley.addStep(haveRecipe, getIngredients);
+		getMarley.setLockingCondition(recruitedMarley);
+
+		getBurntof = new ConditionalStep(this, talkToBurntof);
+		getBurntof.addStep(needRPS, playRPS);
+		getBurntof.addStep(gaveBeer, playRPS);
+		getBurntof.addStep(and(needBeer, beer), giveBeer);
+		getBurntof.addStep(needBeer, buyBeer);
+		getBurntof.setLockingCondition(recruitedBurntof);
+
+		var marleyAndBurntof = new ConditionalStep(this, getMarley);
+		marleyAndBurntof.addStep(recruitedMarley, getBurntof);
+		steps.put(15, marleyAndBurntof);
+
+		steps.put(20, goToDungeon);
+		steps.put(25, goToDungeon);
+		steps.put(30, reenterDungeon);
+
+		var guardian = new ConditionalStep(this, reenterDungeon);
+		guardian.addStep(inDungeon, defeatGuardian);
+		steps.put(35, guardian);
+
+		steps.put(40, watchCutscene);
+
+		return steps;
 	}
 
 	@Override
 	public List<Requirement> getGeneralRequirements()
 	{
-		return Collections.singletonList(new QuestPointRequirement(16));
+		return List.of(
+			new QuestPointRequirement(16)
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRequirements()
+	{
+		return List.of(
+			cookedMeat,
+			bread,
+			knife,
+			coins
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRecommended()
+	{
+		return List.of(
+			iceMountainTeleport,
+			faladorTeleport,
+			varrockTeleport,
+			combatGearOrPickaxe
+		);
+	}
+
+	@Override
+	public List<String> getCombatRequirements()
+	{
+		return List.of(
+			"Ancient Guardian (level 25), or 10 mining + a pickaxe"
+		);
 	}
 
 	@Override
@@ -262,43 +318,69 @@ public class BelowIceMountain extends BasicQuestHelper
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Coins", ItemID.COINS, 2000));
+		return List.of(
+			new ItemReward("Coins", ItemID.COINS, 2000)
+		);
 	}
 
 	@Override
 	public List<UnlockReward> getUnlockRewards()
 	{
-		return Arrays.asList(
-				new UnlockReward("Access to the Ruins of Camdozaal."),
-				new UnlockReward("Flex Emote"),
-				new UnlockReward("The ability to make a steak sandwich")
+		return List.of(
+			new UnlockReward("Access to the Ruins of Camdozaal."),
+			new UnlockReward("Flex Emote"),
+			new UnlockReward("The ability to make a steak sandwich")
 		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var sections = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Starting Off", Collections.singletonList(talkToWillowToStart)));
+		sections.add(new PanelDetails("Starting Off", List.of(
+			talkToWillowToStart
+		)));
 
-		PanelDetails checkalPanel = new PanelDetails("Recruit Checkal",
-			Arrays.asList(recruitCheckal, talkToAtlas, flexCheckal));
+		var checkalPanel = new PanelDetails("Recruit Checkal", List.of(
+			recruitCheckal,
+			talkToAtlas,
+			flexCheckal
+		));
 		checkalPanel.setLockingStep(getCheckal);
-		allSteps.add(checkalPanel);
+		sections.add(checkalPanel);
 
-		PanelDetails marleyPanel = new PanelDetails("Recruit Marley",
-			Arrays.asList(talkToMarley, talkToCook, getIngredients, makeSandwich, feedMarley), cookedMeat, bread, knife);
+		var marleyPanel = new PanelDetails("Recruit Marley", List.of(
+			talkToMarley,
+			talkToCook,
+			getIngredients,
+			makeSandwich,
+			feedMarley
+		), List.of(
+			cookedMeat,
+			bread,
+			knife
+		));
 		marleyPanel.setLockingStep(getMarley);
-		allSteps.add(marleyPanel);
+		sections.add(marleyPanel);
 
-		PanelDetails burntofPanel = new PanelDetails("Recruit Burntof",
-			Arrays.asList(talkToBurntof, buyBeer, giveBeer, playRPS), coins);
+		var burntofPanel = new PanelDetails("Recruit Burntof", List.of(
+			talkToBurntof,
+			buyBeer,
+			giveBeer,
+			playRPS
+		), List.of(
+			coins
+		));
 		burntofPanel.setLockingStep(getBurntof);
-		allSteps.add(burntofPanel);
+		sections.add(burntofPanel);
 
-		allSteps.add(new PanelDetails("Excavation!", Arrays.asList(goToDungeon, defeatGuardian, watchCutscene), combatGearOrPickaxe));
+		sections.add(new PanelDetails("Excavation!", List.of(
+			goToDungeon, defeatGuardian, watchCutscene
+		), List.of(
+			combatGearOrPickaxe
+		)));
 
-		return allSteps;
+		return sections;
 	}
 }
